Bug 536481, clear the mouse capture when a window is lowered or the containing docshell is hidden, r=smaug